--- a/WebContent/views/user_registration.html
+++ b/WebContent/views/user_registration.html
@@ -18,7 +18,7 @@
 	<div class="container">
 		<img id="profile-img" class="profile-img-card" src="images/bear.jpg"
 			alt="" />
-		<h2>User Registration form</h2>
+		<h2>User Registration Form</h2>
 		<form action="http://localhost:9090/WebLoginApplication/register">
 			<div class="form-group">
 				<label for="uname"></label> <input type="text" class="form-control"
